WinImage / linux mucommander.sh removal of apple packages